--- a/app/globals.css
+++ b/app/globals.css
@@ -183,8 +183,11 @@
   body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     height: 100%;
+    width: 100%;
+    max-width: 100vw;
   }
 }
 
